--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ geopandas==0.12.2
 pandas==1.5.3
 Shapely==1.8.5.post1
 streamlit==1.25.0
-streamlit_extras==0.3.4
+streamlit-extras==0.3.4
 streamlit_folium==0.6.10
